# Linked

./: .gitignore  README.md  Top100_H1B_Sponsor_Companies_with_Career_Links.csv  application_tracker.csv  application_tracker.xlsx  generate_report.py  generate_report_docx.py  inspect_db.py  pyproject.toml  requirements.txt  run.ps1
.github/skills/job-search-copilot/: SKILL.md
.github/workflows/: daily-report.yml
data/seeds/: sample_companies.json  sample_leads.json
docs/: FUTURE_INTEGRATIONS.md  KNOWN_LIMITATIONS.md  PROJECT_PLAN.md  TASK_BREAKDOWN.md
scripts/: build_email_summary.py  build_tracker.py
src/: __main__.py  cli.py  config.py  logging_config.py  main.py
src/agents/: approval.py  company_research.py  company_targeting.py  content_agent.py  lead_finder.py  orchestrator.py  outreach_agent.py  people_finder.py
src/db/: init_db.py  models.py  repository.py  seed.py
src/formatters/: dashboard.py
src/schemas/: actions.py  approval.py  company.py  content.py  lead.py  outreach.py
src/services/: content_planner.py  cover_letter.py  lead_sources.py  llm_client.py  outreach_personalizer.py  people_sources.py  prompt_templates.py  research_sources.py  resume_tailor.py  scoring.py  tracker_export.py
src/utils/: text_utils.py  time_utils.py  validators.py
tests/: test_approval.py  test_content.py  test_repository.py  test_scoring.py
