[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-search-copilot"
version = "0.1.0"
description = "A multi-agent job-search assistant for Embedded Software Engineering roles"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Darshil Shah", email = "darshilshah3008@gmail.com"},
]

dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "httpx>=0.25",
    "rich>=13.0",
    "loguru>=0.7",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.104",
    "uvicorn>=0.24",
]
llm = [
    "openai>=1.0",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[project.scripts]
copilot = "src.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100
